--- a/css/index.css
+++ b/css/index.css
@@ -16,8 +16,8 @@
     background-color: #1e293b;
     position:absolute;
     transform: translate(-50%, 50%);
-    top: 50%;
     left: 50%;
+    top:-20%;
     border-radius: 0.6em;
     box-shadow: 1.2em 2em 3em rgba(0,0,0, 0.2);
 }
@@ -86,4 +86,42 @@ h2{
     color: #a0a0a0;
     margin: 0.6em 0;
     font-weight: 300;
+}
+.genre{
+    display: flex;
+    justify-content: space-around;
+}
+.genre div{
+    border: 1px solid #a0a0a0;
+    font-size: 0.75em;
+    padding: 0.4em 1.6em;
+    border-radius: 0.4em;
+    font-weight: 300;
+}
+.h3 {
+    font-weight: 300;
+    margin-top: 1.2em;
+}
+p{
+    font-size:0.9em;
+    font-weight: 300;
+    line-height: 1.9em;
+    text-align: justify;
+    color:#a0a0a0;
+}
+.msg{
+    text-align: center;
+}
+@media screen and (max-width:600px){
+    .container{
+        font-size: 14px;
+    }
+    .poster{
+        margin:auto;
+        width: auto;
+        max-width: 10.8em;
+    }
+    .info{
+        grid-template-columns: 1fr;
+    }
 }
